Fix for Header Row Pattern when vertical targets are visible
 - gx-layout now will auto-grow normally and its overflow will stretch the body height.

 - On the other hand, gx-layout's vertical targets will have their own scrollable content. To achieve this behavior, the content of the vertical targets is placed with "positon: fixed".

 - When HRP is enabled and the asides are visible, we have to reposition the navbar so it does not overlap the asides. If we do not do this, the burger button won't be reached.

--- a/src/components/common/_layout-styling-config.scss
+++ b/src/components/common/_layout-styling-config.scss
@@ -8,6 +8,9 @@ $gx-xsmall-breakpoint-plus-1: 769px;
 $gx-vertical-targets-breakpoint: 1200px;
 $gx-vertical-targets-breakpoint-plus-1: $gx-vertical-targets-breakpoint + 1px;
 
+// - - - - - -  Layout  - - - - - -
+$gx-vertical-target-width: 320px;
+
 // - - - - - - z-index - - - - - -
 $base-z-index: 100;
 $z-index-1: $base-z-index + 1;
