--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -12,28 +12,28 @@ gx-layout {
   --gx-layout-vertical-target-width: auto;
 
   /**
-    * @prop --gx-layout-horizontal-target-height: Height for horizontal targets (top and bottom)
-    */
+   * @prop --gx-layout-horizontal-target-height: Height for horizontal targets (top and bottom)
+   */
   --gx-layout-horizontal-target-height: auto;
 
   /**
-    * @prop --gx-layout-mask-background-color: Mask background color
-    */
+   * @prop --gx-layout-mask-background-color: Mask background color
+   */
   --gx-layout-mask-background-color: #333;
 
   /**
-    * @prop --gx-layout-mask-opacity: Mask opacity
-    */
+   * @prop --gx-layout-mask-opacity: Mask opacity
+   */
   --gx-layout-mask-opacity: 0.749; // Same as Android
 
   /**
-    * @prop --gx-layout-target-transition-duration: Vertical target's transition duration
-    */
+   * @prop --gx-layout-target-transition-duration: Vertical target's transition duration
+   */
   --gx-layout-target-transition-duration: 0.25s;
 
   /**
-    * @prop --gx-layout-target-transition-timing-function: Vertical target's transition timing function
-    */
+   * @prop --gx-layout-target-transition-timing-function: Vertical target's transition timing function
+   */
   --gx-layout-target-transition-timing-function: ease-in-out;
 
   /**
@@ -66,7 +66,6 @@ gx-layout {
     justify-content: stretch;
     align-items: stretch;
     flex-direction: column;
-    overflow: auto; // Each target implements its own scrollable content
 
     &[hidden] {
       display: none !important;
@@ -87,8 +86,11 @@ gx-layout {
     grid-area: 2 / 1 / 3 / 2;
 
     @media screen and (max-width: $gx-vertical-targets-breakpoint) {
-      transform: translateX(0);
-      &[hidden] {
+      & > gx-component-host {
+        transform: translateX(0);
+      }
+
+      &[hidden] > gx-component-host {
         transform: translateX(-100%);
       }
     }
@@ -129,30 +131,59 @@ gx-layout {
     grid-area: 2 / 3 / 3 / 4;
 
     @media screen and (max-width: $gx-vertical-targets-breakpoint) {
-      transform: translateX(-100%);
-      &[hidden] {
+      & > gx-component-host {
+        transform: translateX(-100%);
+      }
+
+      &[hidden] > gx-component-host {
         transform: translateX(0%);
       }
     }
   }
 
+  // If the top navbar is visible, we change the top of the asides. This only
+  // applies if Header Row Pattern is not enabled
+  gx-navbar:not(.gx-navbar-header-row-pattern)
+    ~ &
+    > .vertical
+    > gx-component-host {
+    top: $gx-navbar-main-height;
+  }
+
+  // If the top navbar is visible, we limit the height of the asides.
+  @media screen and (max-width: $gx-xsmall-breakpoint) {
+    &[data-bottom-navbar] > .vertical > gx-component-host {
+      bottom: $gx-navbar-main-height;
+    }
+  }
+
   & > .vertical {
     display: flex;
-    min-width: 320px;
+    width: $gx-vertical-target-width;
 
-    @media screen and (max-width: $gx-vertical-targets-breakpoint) {
-      position: absolute;
-      z-index: $z-index-gx-layout-vertical;
-      bottom: 0;
+    // Each vertical target implements its own scrollable content
+    & > gx-component-host {
+      position: fixed;
       top: 0;
-      transition-property: transform;
-      transition-duration: var(--gx-layout-target-transition-duration);
-      transition-timing-function: var(
-        --gx-layout-target-transition-timing-function
-      );
+      bottom: 0;
+      width: $gx-vertical-target-width;
+      overflow: auto;
+    }
+
+    // In this breakpoint, the vertical target no longer takes up any space in
+    // the layout. Despite this, its content (gx-component-host) will float
+    // above the layout
+    @media screen and (max-width: $gx-vertical-targets-breakpoint) {
+      width: 0; // It works due to the overflow on the aside is visible
+      z-index: $z-index-gx-layout-vertical;
 
       &[hidden] {
         display: flex !important;
+      }
+
+      & > gx-component-host {
+        transition: transform var(--gx-layout-target-transition-duration)
+          var(--gx-layout-target-transition-timing-function);
       }
     }
   }
